<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Diaspora Cluster Generator</string>

    <string name="content_description_create_cluster">Create a cluster</string>
    <string name="content_description_create_links">Create links</string>
    <string name="content_description_delete_aspect">Delete aspect</string>

    <string name="title_system_edit">Edit System</string>
    <string name="title_cluster_list">Clusters</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dialog_title_create_cluster">Create Cluster</string>
    <string name="field_label_name">[Name]</string>
    <string name="menu_add_system">Add system</string>
    <string name="menu_link_cluster">Link cluster</string>
    <string name="menu_share_system">Share system</string>
    <string name="menu_save_cluster">Save cluster</string>
    <string name="menu_share_cluster">Share cluster</string>
    <string name="menu_add_cluster">Add cluster</string>
    <string name="menu_delete_system">Delete system</string>
    <string name="directive_add_cluster">Add a cluster</string>
    <string name="directive_add_system">Add a system</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_title_create_system">Create System</string>
    <string name="header_stats">Stats</string>
    <string name="field_label_technology">Technology:</string>
    <string name="button_label_roll">Roll</string>
    <string name="field_label_environment">Environment:</string>
    <string name="field_label_resources">Resources:</string>
    <string name="header_links">Links</string>
    <string name="header_aspects">Aspects</string>
    <string name="content_description_add_aspect">Add an aspect</string>
    <string name="test_text_cluster_name">[Cluster name]</string>
    <string name="dialog_confirm_delete_system">Are you sure you want to delete the %1$s system?</string>
    <string name="dialog_delete_system_title">Delete %1$s?</string>
    <string name="menu_edit_clusters">Edit clusters</string>
    <string name="text_invalid_fate">Invalid value for fate roll.</string>
    <string name="field_label_aspect">[Aspect]</string>
    <string name="test_text_system_aspect">[AspectText]\n[AspectText2]</string>
    <string name="content_description_edit_aspect">Edit aspect</string>
    <string name="dialog_delete_system_aspect_title">Delete Aspect</string>
    <string name="dialog_confirm_delete_system_aspect">Are you sure you want to delete the aspect \"%1$s\"?</string>
    <string name="dialog_title_add_system_aspect">Add Aspect for %1$s</string>
    <string name="dialog_title_edit_system_aspect">Change aspect for %1$s</string>
    <string name="dialog_error_add_edit_system_aspect">Aspect cannot be empty.</string>
    <string name="context_edit">Edit</string>
    <string name="context_delete">Delete</string>
    <string name="context_share">Share</string>
    <string name="menu_edit_system">Edit system</string>

</resources>
